Closed Bug 254485 Opened 20 years ago Closed 20 years ago

autofill should not retain form info when save form info pref is off

Categories

(Toolkit :: Form Manager, defect)

1.7 Branch
defect
Not set
major

Tracking

()

VERIFIED FIXED

People

(Reporter: bugzilla, Assigned: bryner)

References

Details

(Keywords: fixed-aviary1.0, Whiteboard: [have patch] ready to land)

Attachments

(2 files)

Asa and I were unable to find an open bug on this issue, but pls dup or reassign
as needed. the form mgr (autofill) seems to keep form information in spite of
the save form info pref being turned off.

was able to repro this on Linux and Mac using 200408030x-0.9+ bits.

recipe:

1. go into the Prefs (Options) > Privacy > Saved Form Information section.

2. click the Clear button to remove any saved form info, as well as deselect
(turn OFF) the checkbox for "Save information I enter in web page forms and the
Search Bar."

3. click OK (hit Enter/Return) to save and dismiss Prefs.

4. go a web form, eg: http://www.mozilla.org/wallet/samples/sample2.html

5. enter something for the First Name field, hit Submit (nothing really happens
in this sample form; it's cleared upon submission).

6. repeat step 5 a few times.

7. go back to the pref panel (as in step 1).

actual results: the Clear button is no longer disabled.

expected: Clear should still be disabled since you had cleared the form info and
disabled saving of form info.

8. enable (turn ON) the checkbox for "Save information I enter...", then hit OK
to save and dismiss prefs.

9. revisit http://www.mozilla.org/wallet/samples/sample2.html

10. move focus/caret into First Name field and hit the down arrow.

actual results: the items entered at steps 5 and 6 are somehow listed, even
though the pref for saving form info was disabled.

expected: no form data should be remembered, no autofill droplist should appear.

on a tangent, I noticed bug 204359, where clearing form info doesn't empty (or
even reduce in size) formhistory.data. possibly related?
nominating, as this privacy behavior seems broken.
Flags: blocking-aviary1.0?
Flags: blocking-aviary1.0? → blocking-aviary1.0+
This WFM. This might have been fixed with Bug 249610.

Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.3) Gecko/20040929
Firefox/0.10
This is working for me on windows and mac with the latest branch builds.

marking WFM.

Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → WORKSFORME
Flags: blocking-aviary1.0+
verified with FF branch build 2004-10-05-06-0.9
Status: RESOLVED → VERIFIED
reopening. this is still occuring using 2004101809-0.9+ bits on linux fc2.

tracy/marcia, could you see if this is still occurring for you on win and mac?
Status: VERIFIED → REOPENED
Resolution: WORKSFORME → ---
yep, broken again on Windows build 2004-10-18-07-0.9
Flags: blocking-aviary1.0+
Bryner says he doens't think this was ever fixed. If it was, can we get a window
so we can identify the change that fixed it? Either way, I think we should
definitely look at fixing this for 1.0.
I tend to agree: I think this bug has been around for a while, as opposed to
being a regression.
I may have made the mistake previously of simply checking that the form
autocomplete didn't show anything, which works. But actually turning the pref
back on and returning to the form shows info that should not have been saved. So
ignore comments 3 and 4.
Depends on: 204359
Attached patch poke aroundSplinter Review
this makes the file small when you clear it (uses compress commit instead of
large commit)
A couple of problems - the pref observer was being added with the wrong pref
string, and we need to hold onto the pref branch or our observer will be
unregistered when the branch goes away.
Attachment #162782 - Flags: review?(bugs)
I retested as well and I can now see this bug. It took me a while to trigger it
(I still pass the testcase) and it is still quite intermittent.

I humbly apologize for my premature WFM.
Comment on attachment 162782 [details] [diff] [review]
fix pref observer

a=ben@mozilla.org
Attachment #162782 - Flags: review?(bugs)
Attachment #162782 - Flags: review+
Attachment #162782 - Flags: approval-aviary+
Whiteboard: [have patch] ready to land
Keywords: fixed-aviary1.0
Fix checked in on the branch; waiting for trunk to reopen to check it in there.
Verified fixed on FF branch builds Windows 2004-10-21-07-0.9 and Mac
2004-10-21-07-0.9. Form info is no longer saved when the pref to do so is turned
off.
also vrfy'd fixed on branch using 2004102109-0.9+ on linux fc2. thanks, Ben and
Brian!
checked in on trunk as well.
Status: REOPENED → RESOLVED
Closed: 20 years ago20 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
Product: Firefox → Toolkit
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: