Fix pref observer usage so that nsFormHistory notices when the user has turned off form autofill (bug 254485). r=ben.