toolkit/components/satchel/src/nsFormHistory.h
@@ -44,6 +44,7 @@
 #include "nsString.h"
 #include "nsCOMPtr.h"
 #include "nsIObserver.h"
+#include "nsIPrefBranch.h"
 #include "nsWeakReference.h"
 #include "mdb.h"
 
@@ -101,6 +102,7 @@ protected:
   static PRBool gPrefsInitialized;
 
   nsCOMPtr<nsIMdbFactory> mMdbFactory;
+  nsCOMPtr<nsIPrefBranch> mPrefBranch;
   nsIMdbEnv* mEnv;
   nsIMdbStore* mStore;
   nsIMdbTable* mTable;
